<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".LoginActivity"
        android:id="@+id/coordinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true" >

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical" >

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal"
                    android:weightSum="100">

                <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="25"/>

                <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="50"
                        android:adjustViewBounds="true"
                        app:srcCompat="@drawable/changebank"
                        android:contentDescription="@string/openid_logo_content_description"/>

                <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="25"/>
            </LinearLayout>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/log_in_text"
                    style="@style/Base.TextAppearance.AppCompat.Title"
                    android:textColor="@color/colorAccent" />

            <!--
            displayed while the discovery document is loaded, and dynamic client registration is
            being negotiated
            -->
            <LinearLayout
                    android:id="@+id/loading_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="16dp"
                    android:gravity="center">

                <TextView
                        android:id="@+id/loading_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                <ProgressBar
                        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:indeterminate="true"/>

            </LinearLayout>

            <!-- Displayed once the authorization server configuration is resolved -->
            <LinearLayout
                    android:id="@+id/auth_container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/section_margin"
                    android:layout_marginBottom="8dp"
                    android:orientation="vertical">

                <Button
                        android:id="@+id/start_auth"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:text="@string/start_authorization"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"/>

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"/>


            </LinearLayout>

            <!-- displayed if there is an error. -->
            <LinearLayout
                    android:id="@+id/error_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">

                <TextView
                        android:id="@+id/error_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/section_margin"
                        android:layout_marginBottom="8dp"
                        android:layout_gravity="center"
                        style="@style/Base.TextAppearance.AppCompat.Body1"/>

                <Button
                        android:id="@+id/retry"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/retry_label" />

            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>